[gd_scene load_steps=5 format=3 uid="uid://psgctoajp8w7"]

[ext_resource type="Script" uid="uid://cpe1tid8aa2gb" path="res://scripts/double_finger_button.gd" id="1_q57at"]
[ext_resource type="PackedScene" uid="uid://cvaxexodl6oll" path="res://scenes/large_button.tscn" id="2_7wsvi"]
[ext_resource type="Texture2D" uid="uid://bfkik8atjnu7q" path="res://assets/two finger poke.png" id="3_7wsvi"]
[ext_resource type="AudioStream" uid="uid://ck1qht7rpnsot" path="res://assets/Audio/click3.ogg" id="4_7wsvi"]

[node name="DoubleFingerButton" type="Node2D"]
script = ExtResource("1_q57at")

[node name="LargeButton" parent="." instance=ExtResource("2_7wsvi")]
scale = Vector2(0.8, 0.8)
max_steps = 7.0
current_step = 7

[node name="LargeButton2" parent="." instance=ExtResource("2_7wsvi")]
position = Vector2(53, 0)
scale = Vector2(0.8, 0.8)

[node name="FingerPoint" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(26, -65)
rotation = 3.07178
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_7wsvi")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_7wsvi")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-33, -57)
